deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wireguard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wg-easy
  namespace: wireguard
  labels:
    app: wg-easy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wg-easy
  template:
    metadata:
      labels:
        app: wg-easy
    spec:
      containers:
        - name: wg-easy
          image: ghcr.io/wg-easy/wg-easy
          ports:
            - name: wgserver
              containerPort: 30051
              protocol: UDP
            - name: wgdashboard
              containerPort: 51821
              protocol: TCP
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - name: wg-easy-data
              mountPath: /etc/wireguard
      volumes:
        - name: wg-easy-data
          persistentVolumeClaim:
            claimName: wg-easy-pvc
