service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-udp
  namespace: wireguard
spec:
  selector:
    app: wg-easy
  type: NodePort
  ports:
    - name: wgserver
      port: 51820
      targetPort: 51820
      protocol: UDP
      nodePort: 30051 # You can specify a port in the range 30000-32767, or let Kubernetes assign one

---
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-tcp
  namespace: wireguard
spec:
  selector:
    app: wg-easy
  type: ClusterIP
  ports:
    - name: wgdashboard
      port: 51821
      targetPort: 51821
      protocol: TCP
